tests/paczka1/fuzzy1/67355930.err
Error in line 13: ycdCXuG A606 127,06
Error in line 20: ycdCXuG A606 116,2
Error in line 21: ycdCXuG S46 31,0
Error in line 30: S973 S46 52,7
Error in line 26: YRz4rr5s8 S973 74,4
